--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 9. You were off by 4.
+	My number was 29. You were off by 16.
 	
 <--
 	[OUTPUT OK]
@@ -248,16 +248,15 @@ Ch 4 Multadd
 	[SUCCESSFUL COMPILE] TestCh7Ex4.java
 [RUNNING] TestCh7Ex4
 -->
-
-	<br>Chapter7, Exercise4.indexOfMax()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[false, false]</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[false, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[false, false, true, true]</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[false, false, true, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[false, false, true, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[false, false, true, true, false, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[false, false, true, true, false, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
+Test: Chapter7, Exercise4.indexOfMax()
+	  [PASSED] Exercise4.sieve("2") 
+	  [PASSED] Exercise4.sieve("3") 
+	  [PASSED] Exercise4.sieve("4") 
+	  [PASSED] Exercise4.sieve("5") 
+	  [PASSED] Exercise4.sieve("6") 
+	  [PASSED] Exercise4.sieve("7") 
+	  [PASSED] Exercise4.sieve("8") 
+	  TEST FINISHED, PASSED: 7/7.
 	[deductions=0.0]
 	
 	
