--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 61
-	You were off by: 48
+	THe number I was thinkin of is: 7
+	You were off by: 6
 	
 <--
 	[OUTPUT OK]
@@ -170,7 +170,7 @@ Im thinking of a number between 1-100, can you guess it?
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-12, 6, 3, 10, 5, 16, 8, 4, 2, 14, 2, 111, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
+
 	<br>Results for reverseStr()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -179,9 +179,9 @@ Im thinking of a number between 1-100, can you guess it?
 	</table><br>
 	
 	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left"></td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left"></td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left"></td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12, 6, 3, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
 	
 	<br>Results for isPrime()
@@ -193,17 +193,17 @@ Im thinking of a number between 1-100, can you guess it?
 	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.09]
+	[deductions=0.0]
 	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">0.91</font></b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -237,17 +237,45 @@ Im thinking of a number between 1-100, can you guess it?
 	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
-	[ERROR] javac failed Exercise4.java Exercise4.java:13: error: int cannot be dereferenced
-	           for (int i = 2;i<num.length-1; i++) {
-	                               ^
-	1 error
+	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] TestCh7Ex4
+[COMPILING] TestCh7Ex4.java
+	[SUCCESSFUL COMPILE] TestCh7Ex4.java
+[RUNNING] TestCh7Ex4
+-->
+Test: Chapter7, Exercise4.indexOfMax()
+	  [PASSED] Exercise4.sieve("2") 
+	  [   :( ] Exercise4.indexOfMax("3"): 
+			EXPECTED: [false, false, true]
+			RECEIVED: Exception Thrown
+	  [   :( ] Exercise4.indexOfMax("4"): 
+			EXPECTED: [false, false, true, true]
+			RECEIVED: Exception Thrown
+	  [   :( ] Exercise4.indexOfMax("5"): 
+			EXPECTED: [false, false, true, true, false]
+			RECEIVED: Exception Thrown
+	  [   :( ] Exercise4.indexOfMax("6"): 
+			EXPECTED: [false, false, true, true, false, true]
+			RECEIVED: Exception Thrown
+	  [   :( ] Exercise4.indexOfMax("7"): 
+			EXPECTED: [false, false, true, true, false, true, false]
+			RECEIVED: Exception Thrown
+	  [   :( ] Exercise4.indexOfMax("8"): 
+			EXPECTED: [false, false, true, true, false, true, false, true]
+			RECEIVED: Exception Thrown
+	  TEST FINISHED, PASSED: 1/7.
+	[deductions=0.6]
 	
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
 	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: COMPILE ERROR (- 0.30)']
+	 'Exercise4: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.40</b>
 
 <hr>
 
