--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-30
+Run date: 2018-11-03
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 39
-	You were off by: 26
+	The number I was thinking of was: 36
+	You were off by: 23
 	
 <--
 	[OUTPUT OK]
@@ -317,74 +317,28 @@ Test: Chapter7, Exercise5.areFactors()
 	[OUTPUT OK]
 
 [COMPILING] Exercise6.java
-	[ERROR] javac failed Exercise6.java Exercise6.java:3: error: illegal start of expression
-	<<<<<<< HEAD
-	^
-	Exercise6.java:3: error: illegal start of expression
-	<<<<<<< HEAD
-	  ^
-	Exercise6.java:3: error: illegal start of expression
-	<<<<<<< HEAD
-	    ^
-	Exercise6.java:4: error: > expected
-			int n = 45;
-			^
-	Exercise6.java:4: error: '.class' expected
-			int n = 45;
-			      ^
-	Exercise6.java:4: error: ';' expected
-			int n = 45;
-			       ^
-	Exercise6.java:22: error: illegal start of expression
-	=======
-	^
-	Exercise6.java:22: error: illegal start of expression
-	=======
-	  ^
-	Exercise6.java:22: error: illegal start of expression
-	=======
-	    ^
-	Exercise6.java:22: error: illegal start of expression
-	=======
-	      ^
-	Exercise6.java:23: error: '.class' expected
-			int[] array = new int[]{3,3,3};
-			      ^
-	Exercise6.java:23: error: illegal start of expression
-			int[] array = new int[]{3,3,3};
-			            ^
-	Exercise6.java:23: error: ';' expected
-			int[] array = new int[]{3,3,3};
-			             ^
-	Exercise6.java:23: error: not a statement
-			int[] array = new int[]{3,3,3};
-			                     ^
-	Exercise6.java:23: error: ';' expected
-			int[] array = new int[]{3,3,3};
-			                       ^
-	Exercise6.java:23: error: not a statement
-			int[] array = new int[]{3,3,3};
-			                        ^
-	Exercise6.java:23: error: ';' expected
-			int[] array = new int[]{3,3,3};
-			                         ^
-	Exercise6.java:42: error: illegal start of expression
-	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
-	^
-	Exercise6.java:42: error: illegal start of expression
-	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
-	   ^
-	Exercise6.java:42: error: illegal start of expression
-	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
-	      ^
-	Exercise6.java:42: error: ';' expected
-	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
-	         ^
-	Exercise6.java:42: error: ';' expected
-	>>>>>>> 1a99293fb18735a7d2c2a7ac1345a10711744d3a
-	                                                ^
-	22 errors
+	[SUCCESSFUL COMPILE] Exercise6.java
+[TESTING WITH] TestCh7Ex6
+[COMPILING] TestCh7Ex6.java
+	[SUCCESSFUL COMPILE] TestCh7Ex6.java
+[RUNNING] TestCh7Ex6
+-->
+
+	<br>Chapter7, Exercise6.arePrimeFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.03]
 	
+	
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise8.java
 	[SUCCESSFUL COMPILE] Exercise8.java
 [TESTING WITH] TestCh7Ex8
@@ -400,6 +354,41 @@ letter: s
 	index of letter: 14
 	letter: p
 	index of letter: 15
+	letter: m
+	index of letter: 12
+	letter: o
+	index of letter: 14
+	letter: t
+	index of letter: 19
+	letter: s
+	index of letter: 18
+	i0 o0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 1
+	0 vs. 0
+	1 vs. 1
+	1 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
 	letter: s
 	index of letter: 18
 	letter: t
@@ -408,18 +397,41 @@ letter: s
 	index of letter: 14
 	letter: p
 	index of letter: 15
-	letter: a
-	index of letter: 0
-	letter: l
-	index of letter: 11
-	letter: l
-	index of letter: 11
-	letter: e
-	index of letter: 4
-	letter: n
-	index of letter: 13
-	letter:  
-	index of letter: -65
+	letter: p
+	index of letter: 15
+	letter: o
+	index of letter: 14
+	letter: t
+	index of letter: 19
+	letter: s
+	index of letter: 18
+	i0 o0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
 	letter: f
 	index of letter: 5
 	letter: l
@@ -428,54 +440,92 @@ letter: s
 	index of letter: 8
 	letter: p
 	index of letter: 15
+	letter: f
+	index of letter: 5
+	letter: l
+	index of letter: 11
 	letter: o
 	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: h
-	index of letter: 7
-	letter:  
-	index of letter: -65
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter: o
-	index of letter: 14
-	letter:  
-	index of letter: -65
+	letter: p
+	index of letter: 15
+	i1 o0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	1 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
 	letter: n
 	index of letter: 13
 	letter: o
 	index of letter: 14
 	letter: w
 	index of letter: 22
+	letter: w
+	index of letter: 22
+	letter: o
+	index of letter: 14
+	letter: n
+	index of letter: 13
+	i0 o0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
+	1 vs. 1
+	0 vs. 0
+	0 vs. 0
+	0 vs. 0
 	
 	<br>Chapter7, Exercise8.isAnagram()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise8.isAnagram("stop, mots")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise8.isAnagram("stop, mots")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise8.isAnagram("stop, pots")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("allen downey, well annoyed")  </td><td align="left">Exception Thrown</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("flip, flop")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("ooooooh boy, oooooo hboy")  </td><td align="left">Exception Thrown</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("oooooo hboy, ooooooh boy")  </td><td align="left">Exception Thrown</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("allen downey, well annoyed")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("flip, flop")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("ooooooh boy, oooooo hboy")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise8.isAnagram("oooooo hboy, ooooooh boy")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
 	<tr><td align="right" width="200">Exercise8.isAnagram("now, won")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise8.isAnagram("larp test, lightning bolt")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.36]
+	[deductions=0.09]
 	
 	
 <--
@@ -483,10 +533,10 @@ letter: s
 
 [SUMMARY] 
 	['Exercise5: PASSED - EXCELLENT!'
-	 'Exercise6: COMPILE ERROR (- 0.30)'
-	 'Exercise8: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
+	 'Exercise6: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
+	 'Exercise8: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.34</b>
+<b>          [SCORE] <font color="green">0.88</font></b>
 
 </pre></body></html>
