--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-30
+Run date: 2018-11-03
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -72,8 +72,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 30
-	you were off by -17
+	The number i was thinking of was: 2
+	you were off by 11
 	
 <--
 	[OUTPUT OK]
@@ -218,33 +218,143 @@ Im thinking of a number between 1 and 100
 	[SUCCESSFUL COMPILE] Exercise3.java
 [TESTING WITH] TestCh7Ex3
 [COMPILING] TestCh7Ex3.java
-	[ERROR] javac failed TestCh7Ex3.java
- ----begin compile output------- 
-TestCh7Ex3.java:40: error: incompatible types: int[] cannot be converted to int
-	            int gotBack = Exercise3.indexOfMax(someInts);
-	                                               ^
-	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
-	1 error
+	[SUCCESSFUL COMPILE] TestCh7Ex3.java
+[RUNNING] TestCh7Ex3
+-->
+The numbers are: 
+	33 12 1  
+	33 is larger than 0
+	12 is less than 33
+	1 is less than 33
+	The numbers are: 
+	98 12 99  
+	98 is larger than 0
+	12 is less than 98
+	99 is larger than 98
+	The numbers are: 
+	99 100 98 5 4 3 2 1  
+	99 is larger than 0
+	100 is larger than 99
+	98 is less than 100
+	5 is less than 100
+	4 is less than 100
+	3 is less than 100
+	2 is less than 100
+	1 is less than 100
+	The numbers are: 
+	100000 100 98 5 4 3 2 1  
+	100000 is larger than 0
+	100 is less than 100000
+	98 is less than 100000
+	5 is less than 100000
+	4 is less than 100000
+	3 is less than 100000
+	2 is less than 100000
+	1 is less than 100000
+	The numbers are: 
+	0 1 2 3 4 5  
+	0 is larger than 0
+	1 is larger than 0
+	2 is larger than 1
+	3 is larger than 2
+	4 is larger than 3
+	5 is larger than 4
+	The numbers are: 
+	0 4 3 5 2 7  
+	0 is larger than 0
+	4 is larger than 0
+	3 is less than 4
+	5 is larger than 4
+	2 is less than 5
+	7 is larger than 5
+	The numbers are: 
+	-5 0  
+	-5 is less than 0
+	0 is larger than 0
+	The numbers are: 
+	0 -1  
+	0 is larger than 0
+	-1 is less than 0
 	
------------END COMPILE-------
+	<br>Chapter7, Exercise3.indexOfMax()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.indexOfMax("[33, 12, 1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[98, 12, 99]")  </td><td align="left">2</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[99, 100, 98, 5, 4, 3, 2, 1]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[100000, 100, 98, 5, 4, 3, 2, 1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, 1, 2, 3, 4, 5]")  </td><td align="left">5</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, 4, 3, 5, 2, 7]")  </td><td align="left">5</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[-5, 0]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, -1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
+	
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] TestCh7Ex4
 [COMPILING] TestCh7Ex4.java
-	[ERROR] javac failed TestCh7Ex4.java
- ----begin compile output------- 
-TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to boolean[]
-	            boolean[] gotBack = Exercise4.sieve(n);
-	                                               ^
-	1 error
+	[SUCCESSFUL COMPILE] TestCh7Ex4.java
+[RUNNING] TestCh7Ex4
+-->
+ 0 tF false 
+	 0 tF false  1 tF false  0 tF false 
+	 0 tF false  1 tF false  2 tF false 
+	 2 tF true 
+	 0 tF false 
+	 0 tF false  1 tF false  2 tF false 
+	 2 tF true 
+	 3 tF false 
+	 3 tF true 
+	 0 tF false 
+	 0 tF false  1 tF false  2 tF false 
+	 2 tF true 
+	 3 tF false 
+	 3 tF true 
+	 4 tF false 
+	 0 tF false 
+	 0 tF false  1 tF false  2 tF false 
+	 2 tF true 
+	 3 tF false 
+	 3 tF true 
+	 4 tF false 
+	 0 tF false 
+	 0 tF false  1 tF false  2 tF false 
+	 2 tF true 
+	 3 tF false 
+	 3 tF true 
+	 4 tF false 
+	 6 tF false 
+	 0 tF false 
+	 0 tF false  1 tF false  2 tF false 
+	 2 tF true 
+	 3 tF false 
+	 3 tF true 
+	 4 tF false 
+	 6 tF false 
+	Test: Chapter7, Exercise4.indexOfMax()
+	  [PASSED] Exercise4.sieve("2") 
+	  [PASSED] Exercise4.sieve("3") 
+	  [PASSED] Exercise4.sieve("4") 
+	  [PASSED] Exercise4.sieve("5") 
+	  [PASSED] Exercise4.sieve("6") 
+	  [PASSED] Exercise4.sieve("7") 
+	  [PASSED] Exercise4.sieve("8") 
+	  TEST FINISHED, PASSED: 7/7.
+	[deductions=0.0]
 	
------------END COMPILE-------
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
-	['Exercise3: COMPILE ERROR (- 0.30)'
-	 'Exercise4: COMPILE ERROR (- 0.30)']
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -257,23 +367,123 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] TestCh7Ex5
 [COMPILING] TestCh7Ex5.java
-	[ERROR] javac failed TestCh7Ex5.java
+	[SUCCESSFUL COMPILE] TestCh7Ex5.java
+[RUNNING] TestCh7Ex5
+-->
+Test: Chapter7, Exercise5.areFactors()
+	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
+	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
+	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
+			EXPECTED: true
+			RECEIVED: false
+	  TEST FINISHED, PASSED: 2/6.
+	[deductions=0.12]
+	
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise6.java
+	[SUCCESSFUL COMPILE] Exercise6.java
+[TESTING WITH] TestCh7Ex6
+[COMPILING] TestCh7Ex6.java
+	[SUCCESSFUL COMPILE] TestCh7Ex6.java
+[RUNNING] TestCh7Ex6
+-->
+v 1
+	pri 0
+	v 2
+	pri 1
+	v 3
+	pri 1
+	v 1
+	pri 1
+	v 2
+	pri 2
+	v 3
+	pri 3
+	v 3
+	pri 3
+	v 1
+	pri 2
+	v 2
+	pri 3
+	v 2
+	pri 3
+	v 1
+	pri 1
+	v 2
+	pri 2
+	v 3
+	pri 2
+	v 1
+	pri 1
+	v 2
+	pri 3
+	v 3
+	pri 4
+	v 3
+	pri 4
+	v 0
+	pri 1
+	v 0
+	pri 3
+	v 0
+	pri 4
+	v 1
+	pri 1
+	v 2
+	pri 2
+	v 3
+	pri 3
+	v 3
+	pri 3
+	
+	<br>Chapter7, Exercise6.arePrimeFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise8.java
+	[SUCCESSFUL COMPILE] Exercise8.java
+[TESTING WITH] TestCh7Ex8
+[COMPILING] TestCh7Ex8.java
+	[ERROR] javac failed TestCh7Ex8.java
  ----begin compile output------- 
-TestCh7Ex5.java:54: error: method areFactors in class Exercise5 cannot be applied to given types;
-	            boolean gotBack = Exercise5.areFactors(n, someInts);
-	                                       ^
-	  required: int
-	  found: int,int[]
-	  reason: actual and formal argument lists differ in length
+TestCh7Ex8.java:68: error: cannot access Exercise8
+	            boolean gotBack = Exercise8.isAnagram(s1, s2);
+	                              ^
+	  bad source file: ./Exercise8.java
+	    file does not contain class Exercise8
+	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
 	1 error
 	
 -----------END COMPILE-------
 [SUMMARY] 
-	['Exercise5: COMPILE ERROR (- 0.30)'
-	 'Exercise6: MISSING (- 0.50)'
-	 'Exercise8: MISSING (- 0.50)']
+	['Exercise5: PASSED - BUT TEST CASES FOUND SOME ERRORS'
+	 'Exercise6: PASSED - EXCELLENT!'
+	 'Exercise8: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.58</b>
 
 </pre></body></html>
